[package]
name = "winlog"
version = "0.2.5"
authors = ["Jeroen C. van Gelderen <jeroen@vangelderen.org>"]
build = "build.rs"
categories = [ "development-tools::debugging", "os::windows-apis" ]
description = "A simple Rust log backend to send messages to the Windows event log."
documentation = "https://gitlab.com/arbitrix/winlog"
homepage = "https://gitlab.com/arbitrix/winlog"
repository = "https://gitlab.com/arbitrix/winlog"
keywords = [ "eventlog", "logging", "windows" ]
license = "MIT OR Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[build-dependencies]
regex = { version = "1.0", features = ["std", "unicode-perl"], default-features = false }
sha2 = "0.8.0"

[dev-dependencies]
rand = "0.5"

[dependencies]
env_logger = { version = "0.6", features = [], default-features = false, optional = true }
log = { version = "0.4", features = [ "std" ] }
winapi = { version = "0.3", features = [ "winbase" ] }
winreg = "0.5"

[features]
default = []
