[package]
name = "eventlog"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
build = "build.rs"
categories = ["development-tools::debugging", "os::windows-apis"]
description = "A log-compatible wrapper around the Windows Event Log API"
repository = "https://github.com/bbqsrc/eventlog"
keywords = ["eventlog", "logging", "windows"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[dependencies]
log = { version = "0.4.17", features = ["std"] }
registry = "1.2.2"
thiserror = "1.0.38"
winapi = { version = "0.3.9", features = ["winbase"] }

[build-dependencies]
regex = { version = "1.7.1", features = ["std", "unicode-perl"], default-features = false }
sha2 = "0.10.6"

[dev-dependencies]
rand = "0.8.5"
